# trigram-compare

./: .gitignore  CLAUDE.md  LICENSE  README.md  gen_testdata.py  pyproject.toml  test_trigram.py  trigram_compare.py  trigram_index.py
.github/workflows/: test.yml
docs/: explanation-similarity-metrics.md  how-to-tune-sensitivity.md  reference-cli.md  tutorial-first-comparison.md
