# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Bill Halpin
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trigram-compare"
version = "0.1.0"
description = "Binary file similarity analysis using 3-byte n-gram (trigram) indexing"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Bill Halpin" }]
keywords = ["binary-analysis", "similarity", "ngram", "malware-analysis", "forensics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Filesystems",
]

[project.urls]
Repository = "https://github.com/wrhalpin/trigram-compare"

[project.scripts]
trigram-compare = "trigram_compare:main"

[tool.setuptools]
py-modules = ["trigram_compare", "trigram_index"]
